Issue #25143: Improves installer error messages for unsupported platforms.